--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "nodemailer-1",
   "version": "1.0.1",
   "scripts": {
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "type": "commonjs",
   "dependencies": {
     "bootstrap": "^5.2.1",
     "express": "^4.18.1",
     "nodemailer": "^6.7.8"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
